--- a/game/picaris/index.html
+++ b/game/picaris/index.html
@@ -144,8 +144,9 @@
     </div>
 
     <div align="start" class="content"><div class="embed video-player">
-    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/7bICpsxboaQ" allowfullscreen frameborder="0"></iframe>
+    <iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/7bICpsxboaQ" allowfullscreen frameborder="0"></iframe>
 </div>
+
 </div>
 
 </main>
