--- a/game/picaris/index.html
+++ b/game/picaris/index.html
@@ -143,7 +143,8 @@
 
     </div>
 
-    <div align="start" class="content"><div class="embed video-player">
+    <div align="start" class="content"><p><a href="./picaris/index.html">PlayDemo</a></p>
+<div class="embed video-player">
     <iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/7bICpsxboaQ" allowfullscreen frameborder="0"></iframe>
 </div>
 
