--- a/game/picton/index.html
+++ b/game/picton/index.html
@@ -45,7 +45,7 @@
 <link rel="stylesheet" href="https://hadoumune.github.io/css/main.css">
 
 
-
+ <link rel="stylesheet" href="https://hadoumune.github.io/css/custom.css"> 
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=M%20PLUS%201p">
@@ -147,8 +147,13 @@
     <iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/wF05vwmP_t8" allowfullscreen frameborder="0"></iframe>
 </div>
 
-    <a href="https://apps.apple.com/jp/app/picton/id1182812623?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2017-01-03&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
-</p>
+<div class="center">
+    <a href="https://apps.apple.com/jp/app/picton/id1182812623?mt=8"><img src="https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2017-01-03&kind=iossoftware&bubble=ios_apps" height="40" style="display:inline-block;overflow:hidden;background: no-repeat;margin:10px;"></a>
+
+<a href='https://play.google.com/store/apps/details?id=jp.pegionchest.Picton&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+		<img alt='Google Play で手に入れよう' src='https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png' width="153"/></a>
+
+</div></p>
 </div>
 
 </main>
