--- a/game/gancolle/index.html
+++ b/game/gancolle/index.html
@@ -25,7 +25,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Picton</title>
+        <title>雁コレ</title>
         
         <style>
 
@@ -97,7 +97,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand visible-xs" href="#">Picton</a>
+                    <a class="navbar-brand visible-xs" href="#">雁コレ</a>
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -137,23 +137,15 @@
 <main>
 
     <div>
-        <h2>Picton</h2>
+        <h2>雁コレ</h2>
         <h5></h5>
         
 
     </div>
 
-    <div align="start" class="content"><p><div class="embed video-player">
-    <iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/wF05vwmP_t8" allowfullscreen frameborder="0"></iframe>
-</div>
+    <div align="start" class="content"><figure><a href="https://unityroom.com/games/neck_collection"><img src="./screenshot.png"/></a>
+</figure>
 
-<div class="center">
-    <a href="https://apps.apple.com/jp/app/picton/id1182812623?mt=8"><img src="https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2017-01-03&kind=iossoftware&bubble=ios_apps" height="40" style="display:inline-block;overflow:hidden;background: no-repeat;margin:10px;"></a>
-
-<a href='https://play.google.com/store/apps/details?id=jp.pegionchest.Picton&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-		<img alt='Google Play で手に入れよう' src='https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png' width="153"/></a>
-
-</div></p>
 </div>
 
 </main>
